# Robomaster-viision-exam

./: .gitignore  README.md  视觉组简历.docx
第一部分/: README.md
第三部分/: README.md  test_all.sh
第三部分/3.1_async_comm/: client.py  test.sh
第三部分/3.2_skills/: manager.py  test.py  test.sh  test_advanced.py  test_advanced.sh
第三部分/3.3_logstream/: generate_test_data.py  stream_count_error.py  test.sh
第二部分/: README.md  test_all.sh
第二部分/2.1_env/: README.md  setup_env.sh  test.sh
第二部分/2.2_repo/: README.md  init_repo.sh  test.sh
第二部分/2.2_repo/sample_repo/: .gitignore
第二部分/2.2_repo/sample_repo/hello_rm/: README.md
第二部分/2.2_repo/sample_repo/hello_rm/src/: main.py
第二部分/2.3_container/: Dockerfile  README.md  requirements.txt  test.sh
第二部分/2.3_container/app/: main.py
第五部分/: README.md  test.sh
第五部分/rm_ws/: .gitignore  run.ps1  run.sh
第五部分/rm_ws/src/rm_vision_sim/: package.xml  setup.py
第五部分/rm_ws/src/rm_vision_sim/config/: detector_config.yaml
第五部分/rm_ws/src/rm_vision_sim/launch/: tracking_sim.launch.py
第五部分/rm_ws/src/rm_vision_sim/rm_vision_sim/: __init__.py  camera_node.py  detector_node.py  logger_node.py  viewer_node.py
第五部分/rm_ws/src/rm_vision_sim/scripts/: camera_node  detector_node  logger_node
第六部分/: README.md  models.py  requirements.txt  test.sh  train.py
第四部分/: README.md  astar_out.txt  test.sh
第四部分/algorithms/: dijkstra.py  lru_cache.py  tests.py  union_find.py
第四部分/astar/: astar.py  map.txt
