<?xml version="1.0"?>
<package format="3">
  <name>rm_vision_sim</name>
  <version>0.0.1</version>
  <description>RM vision simulation with camera, detector, logger nodes</description>
  <maintainer email="rm@example.com">rm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


